# LineupTool

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: backend.yml  deploy.yml  frontend.yml
backend/: alembic.ini  pyproject.toml  seed_games.py  seed_players.py
backend/alembic/: env.py
backend/alembic/versions/: 80003190caeb_initial_models.py  a1b2c3d4e5f6_remove_status_and_preferred_position.py  b1c2d3e4f5a6_add_license_number_to_players.py  c1d2e3f4a5b6_add_role_and_status_to_players.py  d1e2f3a4b5c6_add_game_number_to_games.py  e2f3a4b5c6d7_add_is_flex_to_lineup_slots.py
backend/app/: main.py
backend/app/db/: database.py
backend/app/models/: __init__.py  enums.py  game.py  game_availability.py  lineup.py  lineup_slot.py  player.py
backend/app/routers/: __init__.py  backup.py  game_availability.py  games.py  import_teamsnap.py  lineups.py  players.py
backend/app/schemas/: __init__.py  game.py  game_availability.py  lineup.py  lineup_slot.py  player.py
backend/tests/: conftest.py
backend/tests/models/: test_game.py  test_game_availability.py  test_lineup.py  test_lineup_slot.py  test_player.py  test_relationships.py
backend/tests/routers/: test_availability.py  test_games.py  test_import_teamsnap.py  test_lineups.py  test_players.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: availability.ts  backup.ts  client.ts  games.ts  import.ts  lineups.ts  players.ts
frontend/src/lib/: toast.tsx  useToast.ts  utils.ts
(+31 files in other folders)
