[project]
name = "lineup-backend"
version = "0.1.0"
description = "Lineup management tool backend"
authors = [
    {name = "Isabelle Tan",email = "isabelle.tan@medivation.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<1.0.0",
    "uvicorn[standard]>=0.41.0,<1.0.0",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.6"
pytest = "^8.0.0"
httpx = "^0.28.1"

